--- a/app/src/main/res/layout/dialog_detail_video.xml
+++ b/app/src/main/res/layout/dialog_detail_video.xml
@@ -190,6 +190,30 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="8dp"
+                android:text="Release:"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/dialog_video_release"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginRight="8dp"
+                tools:text="13.11.2019"/>
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
