--- a/app/src/main/res/layout/dialog_edit_views.xml
+++ b/app/src/main/res/layout/dialog_edit_views.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,8 +14,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
-        android:gravity="bottom"
         android:layout_marginTop="8dp"
+        android:gravity="bottom"
+        android:minHeight="1000dp"
         android:orientation="horizontal">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -43,4 +44,4 @@
             tools:visibility="visible" />
     </LinearLayout>
 
-</LinearLayout>
+</FrameLayout>
