--- a/app/src/main/res/layout/fragment_calender.xml
+++ b/app/src/main/res/layout/fragment_calender.xml
@@ -78,6 +78,7 @@
             android:id="@+id/fragmentCalender_videoList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:minHeight="1000dp"
             android:orientation="vertical" />
         </LinearLayout>
 </LinearLayout>
