--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -13,13 +13,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="16dp"
+            android:layout_marginVertical="16dp"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
+                android:layout_marginHorizontal="16dp"
                 android:text="Bereiche"
                 android:textColor="@color/colorPrimary"
                 android:textStyle="bold" />
@@ -29,58 +30,6 @@
                 android:id="@+id/settings_spaces_recycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
-
-<!--            <View-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="1dp"-->
-<!--                android:layout_marginVertical="5dp"-->
-<!--                android:background="?android:attr/listDivider" />-->
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:orientation="horizontal">-->
-
-<!--                <LinearLayout-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_weight="1"-->
-<!--                    android:orientation="vertical">-->
-
-<!--                    <TextView-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:text="@string/sort_hierarchy"-->
-<!--                        android:textStyle="bold" />-->
-
-<!--                    <LinearLayout-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:orientation="horizontal">-->
-
-<!--                        <FrameLayout-->
-<!--                            android:layout_width="match_parent"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:layout_weight="1">-->
-
-<!--                            <TextView-->
-<!--                                android:layout_width="wrap_content"-->
-<!--                                android:layout_height="wrap_content"-->
-<!--                                android:text="Offene Einträge und Einträge im Warenkorb immer oben anzeigen"-->
-<!--                                android:textSize="12sp" />-->
-<!--                        </FrameLayout>-->
-
-<!--                        <Switch-->
-<!--                            android:id="@+id/settings_shoppingList_hierarchy"-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:layout_marginLeft="8dp"-->
-<!--                            android:checked="true" />-->
-<!--                    </LinearLayout>-->
-
-<!--                </LinearLayout>-->
-
-<!--            </LinearLayout>-->
 
         </LinearLayout>
 
