--- a/app/src/main/res/layout/dialog_edit_views.xml
+++ b/app/src/main/res/layout/dialog_edit_views.xml
@@ -8,15 +8,14 @@
     <ViewStub
         android:id="@+id/dialog_editViews_calender"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="match_parent" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end"
+        android:layout_gravity="end|bottom"
         android:layout_marginTop="8dp"
         android:gravity="bottom"
-        android:minHeight="1000dp"
         android:orientation="horizontal">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
