--- a/app/src/main/res/layout/fragment_calender.xml
+++ b/app/src/main/res/layout/fragment_calender.xml
@@ -65,20 +65,26 @@
         android:id="@+id/fragmentCalender_noTrips"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginVertical="16dp"
         android:text="Keine Ansicht an diesem Tag"
         android:textAlignment="center"
         android:textSize="12sp" />
 
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/fragmentCalender_videoList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:minHeight="1000dp"
             android:orientation="vertical" />
-        </LinearLayout>
+
+<!--        <FrameLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="400dp"-->
+<!--            android:background="#9C27B0" />-->
+    </FrameLayout>
+
 </LinearLayout>
