--- a/app/src/main/res/layout/main_fragment_knowledge.xml
+++ b/app/src/main/res/layout/main_fragment_knowledge.xml
@@ -61,6 +61,7 @@
                         app:layout_constraintTop_toTopOf="parent">
 
                         <TextView
+                            android:id="@+id/main_knowledge_label"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
