--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorDdivider">#858585</color>
+    <color name="colorDivider">#858585</color>
     <color name="colorTileBackground">#1A1A1A</color>
     <color name="colorDayNightContent">#B3B3B3</color>
     <color name="colorBackground">#303030</color>
