--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimary">#FFB300</color>
     <color name="colorPrimaryDark">#FB8C00</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="colorDdivider">#D7D8DD</color>
+    <color name="colorDivider">#D7D8DD</color>
 
     <color name="colorGreen">#4CAF50</color>
 
