--- a/app/src/main/res/layout/dialog_custom_new.xml
+++ b/app/src/main/res/layout/dialog_custom_new.xml
@@ -7,43 +7,53 @@
     android:gravity="right"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/dialog_custom_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="12dp"
-        tools:text="title"
-        android:textAlignment="center"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
     <LinearLayout
-        android:id="@+id/dialog_custom_layout_text"
+        android:id="@+id/dialog_custom_title_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone"
+        android:layout_marginTop="12dp"
+        tools:visibility="visible">
+
+        <TextView
+            android:id="@+id/dialog_custom_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:textAlignment="center"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            tools:text="title" />
 
         <View
-            android:id="@+id/dialog_custom_divider1"
+            android:id="@+id/dialog_custom_dividerTitle"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginTop="12dp"
             android:background="@color/colorDivider" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/dialog_custom_text_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="gone"
+        android:layout_marginTop="16dp"
+        tools:visibility="visible">
 
         <TextView
             android:id="@+id/dialog_custom_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
+            android:layout_marginHorizontal="16dp"
             tools:text="text" />
 
         <View
-            android:id="@+id/dialog_custom_divider2"
+            android:id="@+id/dialog_custom_dividerText"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="16dp"
@@ -51,31 +61,27 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/dialog_custom_layout_edit"
+        android:id="@+id/dialog_custom_edit_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <View
-            android:id="@+id/dialog_custom_divider3"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginBottom="10dp"
-            android:background="@color/colorDivider" />
+        android:orientation="vertical"
+        android:visibility="gone"
+        android:layout_marginTop="16dp"
+        tools:visibility="visible">
 
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/dialog_settings_size"
+            android:id="@+id/dialog_custom_edit_editLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_marginHorizontal="12dp"
             app:errorEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/dialog_custom_edit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="12dp"
                 android:inputType="textCapSentences"
                 android:selectAllOnFocus="true"
                 android:singleLine="true"
@@ -83,7 +89,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <View
-            android:id="@+id/dialog_custom_divider4"
+            android:id="@+id/dialog_custom_dividerEdit"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="16dp"
@@ -95,13 +101,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="vertical">
-
-        <View
-            android:id="@+id/dialog_custom_divider5"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorDivider" />
+        android:orientation="vertical"
+        android:visibility="gone"
+        tools:visibility="visible">
 
         <ScrollView
             android:id="@+id/dialog_custom_layout_view_interface"
@@ -109,7 +111,8 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:fillViewport="true"
-            android:visibility="gone"/>
+            android:visibility="gone"
+            tools:visibility="visible" />
 
         <LinearLayout
             android:id="@+id/dialog_custom_layout_view_interface_restrained"
@@ -117,11 +120,12 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="vertical"
-            android:visibility="gone" />
+            android:visibility="gone"
+            tools:visibility="visible" />
 
 
         <View
-            android:id="@+id/dialog_custom_divider6"
+            android:id="@+id/dialog_custom_dividerView"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@color/colorDivider" />
@@ -129,28 +133,21 @@
 
     </LinearLayout>
 
+    <org.apmem.tools.layouts.FlowLayout
+        android:id="@+id/dialog_custom_buttonLayout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right">
+
+    </org.apmem.tools.layouts.FlowLayout>
+
     <Button
         android:id="@+id/dialog_custom_Button1"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         tools:text="Beispiel Button"
-        android:visibility="gone"
         tools:visibility="visible" />
-
-    <View
-        android:id="@+id/dialog_custom_divider"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/colorDivider"
-        android:visibility="gone"
-        tools:visibility="visible" />
-
-    <org.apmem.tools.layouts.FlowLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/dialog_custom_buttonLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="right"></org.apmem.tools.layouts.FlowLayout>
 
 </LinearLayout>
