--- a/app/src/main/res/layout/dialog_edit_or_add_owe.xml
+++ b/app/src/main/res/layout/dialog_edit_or_add_owe.xml
@@ -17,6 +17,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <TextView
@@ -26,13 +27,20 @@
                 android:text="Titel:"
                 android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/dialog_editOrAdd_owe_Title"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/dialog_editOrAdd_owe_Title_layout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:inputType="textAutoCorrect|textCapSentences|textAutoComplete"
-                android:selectAllOnFocus="true" />
+                app:errorEnabled="true">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/dialog_editOrAdd_owe_Title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:selectAllOnFocus="true"
+                    android:singleLine="true" />
+            </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
 
         <LinearLayout
