--- a/app/src/main/res/layout/dialog_edit_or_add_video.xml
+++ b/app/src/main/res/layout/dialog_edit_or_add_video.xml
@@ -34,7 +34,8 @@
                 android:layout_weight="1"
                 app:errorEnabled="true">
 
-                <com.google.android.material.textfield.TextInputEditText
+
+                <AutoCompleteTextView
                     android:id="@+id/dialog_editOrAddVideo_Titel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -42,12 +43,6 @@
                     android:singleLine="true" />
             </com.google.android.material.textfield.TextInputLayout>
 
-<!--            <EditText-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_weight="1"-->
-<!--                android:inputType="textAutoCorrect|textCapSentences|textAutoComplete"-->
-<!--                android:selectAllOnFocus="true" />-->
         </LinearLayout>
 
         <LinearLayout
