--- a/app/src/main/res/layout/list_item_season.xml
+++ b/app/src/main/res/layout/list_item_season.xml
@@ -29,16 +29,18 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/listItem_season_name"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="8dp"
+                android:layout_weight="1"
+                android:textColor="@color/colorPrimaryDark"
                 android:textStyle="bold"
                 tools:text="Name sdasdasdasdasd sdsdds" />
 
