--- a/app/src/main/res/layout/list_item_season.xml
+++ b/app/src/main/res/layout/list_item_season.xml
@@ -42,7 +42,7 @@
                 android:layout_weight="1"
                 android:textColor="@color/colorPrimaryDark"
                 android:textStyle="bold"
-                tools:text="Name sdasdasdasdasd sdsdds" />
+                tools:text="Name" />
 
             <TextView
                 android:id="@+id/listItem_season_release"
@@ -58,12 +58,12 @@
             android:gravity="end"
             android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="8dp"
-                android:text="Folgen:"
-                android:textStyle="bold|italic" />
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginRight="8dp"-->
+<!--                android:text="Folgen:"-->
+<!--                android:textStyle="bold|italic" />-->
 
             <TextView
                 android:id="@+id/listItem_season_episodes"
