--- a/app/src/main/res/layout/list_item_video.xml
+++ b/app/src/main/res/layout/list_item_video.xml
@@ -99,6 +99,15 @@
                         app:srcCompat="@drawable/ic_time"
                         tools:visibility="visible" />
 
+                    <ImageView
+                        android:id="@+id/listItem_video_upcoming"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:padding="2dp"
+                        android:visibility="gone"
+                        app:srcCompat="@drawable/ic_calendar"
+                        tools:visibility="visible" />
+
                 </LinearLayout>
 
             </LinearLayout>
