--- a/app/src/main/res/layout/dialog_custom.xml
+++ b/app/src/main/res/layout/dialog_custom.xml
@@ -1,48 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/dialog_custom_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:gravity="right"
+    android:gravity="end"
     android:orientation="vertical">
 
-    <LinearLayout
+    <FrameLayout
         android:id="@+id/dialog_custom_title_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:visibility="gone"
-        android:layout_marginTop="12dp"
         tools:visibility="visible">
 
-        <TextView
-            android:id="@+id/dialog_custom_title"
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/dialog_custom_title_backButton"
+            style="@style/ImageButtonStyle"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:textAlignment="center"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            tools:text="title" />
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:visibility="gone"
+            app:srcCompat="@drawable/ic_arrow_back"
+            tools:visibility="visible" />
 
-        <View
-            android:id="@+id/dialog_custom_dividerTitle"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="12dp"
-            android:background="@color/colorDivider" />
-    </LinearLayout>
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/dialog_custom_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginRight="16dp"
+                android:textAlignment="center"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                tools:layout_marginLeft="60dp"
+                tools:layout_marginRight="60dp"
+                tools:text="title" />
+
+            <View
+                android:id="@+id/dialog_custom_dividerTitle"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="12dp"
+                android:background="@color/colorDivider" />
+        </LinearLayout>
+
+    </FrameLayout>
 
     <LinearLayout
         android:id="@+id/dialog_custom_text_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:orientation="vertical"
         android:visibility="gone"
-        android:layout_marginTop="16dp"
         tools:visibility="visible">
 
         <TextView
@@ -64,9 +85,9 @@
         android:id="@+id/dialog_custom_edit_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:orientation="vertical"
         android:visibility="gone"
-        android:layout_marginTop="16dp"
         tools:visibility="visible">
 
 
@@ -74,14 +95,15 @@
             android:id="@+id/dialog_custom_edit_editLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginHorizontal="12dp"
+            android:layout_weight="1"
             app:errorEnabled="true">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <AutoCompleteTextView
                 android:id="@+id/dialog_custom_edit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:completionThreshold="0"
                 android:inputType="textCapSentences"
                 android:selectAllOnFocus="true"
                 android:singleLine="true"
