--- a/app/src/main/res/layout/main_fragment_shows.xml
+++ b/app/src/main/res/layout/main_fragment_shows.xml
@@ -196,7 +196,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="8dp"
-                                android:text="Kallendar"
+                                android:text="Kalender"
                                 android:textSize="24sp"
                                 android:textStyle="bold" />
 
@@ -345,8 +345,10 @@
                             android:background="@color/colorPrimary"
                             android:gravity="center"
                             android:padding="5dp"
+                            android:visibility="gone"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent">
+                            app:layout_constraintTop_toTopOf="parent"
+                            tools:visibility="visible">
 
                             <TextView
                                 android:id="@+id/main_shows_notificationIndicator"
