--- a/app/src/main/res/layout/dialog_edit_or_add_video.xml
+++ b/app/src/main/res/layout/dialog_edit_or_add_video.xml
@@ -39,6 +39,7 @@
                     android:id="@+id/dialog_editOrAddVideo_Titel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:inputType="textCapSentences"
                     android:selectAllOnFocus="true"
                     android:singleLine="true" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -166,6 +167,7 @@
                 android:id="@+id/dialog_editOrAddVideo_Url_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 app:errorEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -174,6 +176,14 @@
                     android:layout_height="wrap_content"
                     android:singleLine="true" />
             </com.google.android.material.textfield.TextInputLayout>
+
+            <ImageView
+                android:id="@+id/dialog_editOrAddVideo_internet"
+                style="@style/ImageButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_internet" />
+
         </LinearLayout>
 
         <LinearLayout
