Links können jetzt auch von Chrome geteilt werden und kleinere Bugfixe

--- a/app/src/main/res/layout/dialog_edit_or_add_video.xml
+++ b/app/src/main/res/layout/dialog_edit_or_add_video.xml
@@ -174,6 +174,7 @@
                     android:id="@+id/dialog_editOrAddVideo_Url"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:selectAllOnFocus="true"
                     android:singleLine="true" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -187,6 +188,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/dialog_editOrAddVideo_datePicker_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
@@ -199,19 +201,6 @@
                 android:text="Release:"
                 android:textStyle="bold" />
 
-<!--            <FrameLayout-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_weight="1">-->
-
-<!--                <TextView-->
-<!--                    android:id="@+id/dialog_editOrAddVideo_release"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_marginEnd="8dp"-->
-<!--                    tools:text="13.11.2019"-->
-<!--                    android:visibility="invisible"/>-->
-
                 <com.mikhaellopez.lazydatepicker.LazyDatePicker
                     android:id="@+id/dialog_editOrAddVideo_datePicker"
                     android:layout_width="wrap_content"
@@ -220,17 +209,6 @@
                     app:ldp_hint_color="@color/colorTileBackground"
                     app:ldp_date_format="dd-mm-yyyy"
                     android:paddingVertical="8dp"/>
-<!--            </FrameLayout>-->
-
-<!--            <ImageView-->
-<!--                android:id="@+id/dialog_editOrAddVideo_releasePicker"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:clickable="true"-->
-<!--                android:foreground="@drawable/ripple"-->
-<!--                android:padding="5dp"-->
-<!--                app:srcCompat="@drawable/ic_kallendar_grey" />-->
-
         </LinearLayout>
 
         <LinearLayout
